<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="345dp"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#F8FDFF"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:textSize="24sp"
            android:textColor="#003C56"
            android:gravity="center"
            android:fontFamily="@font/ibmplexserif_regular"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_gravity="center"
            android:gravity="center">

            <Button
                android:id="@+id/btn_cansel"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:text="@string/cansel"
                android:textSize="24sp"
                android:textColor="#F8FDFF"
                android:fontFamily="@font/ibmplexserif_regular"
                android:backgroundTint="#80003C56"
                android:layout_marginEnd="5dp"/>

            <Button
                android:id="@+id/btn_exit"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:text="@string/exit"
                android:textSize="24sp"
                android:textColor="#F8FDFF"
                android:fontFamily="@font/ibmplexserif_regular"
                android:backgroundTint="#003C56"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>